--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
     <link rel="" type="" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ininventory management</title>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-thin-rounded/css/uicons-thin-rounded.css'>
   </head>
   <body>
     <div id="root"></div>
