--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="" type="" href="" />
+    <link rel="icon" type="image/png" href="/src/assets/logistics.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ininventory management</title>
+    <title>Inventory management</title>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-thin-rounded/css/uicons-thin-rounded.css'>
   </head>
   <body>
